--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 		<!-- Thymeleaf security support-->
+		<!-- xmlns:sec="http://www.thymeleaf.org/extras/spring-security" -->
 		<dependency>
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
