--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.datasource.url= jdbc:mysql://localhost:3306/account?useSSL=false&serverTi
 spring.datasource.username=account
 spring.datasource.password=account
 
+# Only use this for dev/testing
+# DO NOT use for PRODUCTION since it will log user name
+logging.level.org.springframework.jdbc.core=TRACE
+
 # Spring Data Rest properties
 spring.data.rest.base-path=/spring-data-rest-api
 spring.data.rest.default-page-size=5
